--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 <h1>Proj 1</h1>
 
 - <a href="/foo/">Link with trailing slash (like our /docs/)</a><br>
-- <a href="/foo/subpage">Link with trailing slash + subpage (like our /docs/)</a><br>
+- <a href="/foo/subpage.html">Link with trailing slash + subpage</a><br>
+- <a href="/foo/subpage.html/">Link with trailing slash + subpage with trailing slash</a><br>
+
 <br>
 - <a href="/bar">Link without trailing slash (like our /day)</a><br>
-- <a href="/bar/subpage">Link without trailing slash + subpage (like our /day)</a><br>
+- <a href="/bar/subpage.html">Link without trailing slash + subpage</a><br>
+- <a href="/bar/subpage.html/">Link without trailing slash + subpage with trailing slash</a><br>
 
+ 
 </body>
 </html>
