--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 
 <h1>Proj 1</h1>
 
-- <a href="/foo/">Link with trailing slash (like our /docs/)</a><br>
+ <h2>"foo" that should work like `/docs/`</h2>
+- <a href="/foo/">Link with trailing slash</a><br>
+- <a href="/foo/">Link without trailing slash</a><br>
 - <a href="/foo/subpage.html">Link with trailing slash + subpage</a><br>
 - <a href="/foo/subpage.html/">Link with trailing slash + subpage with trailing slash</a><br>
 
 <br>
-- <a href="/bar">Link without trailing slash (like our /day)</a><br>
+
+<h2>"bar" that should work like `/day`</h2>
+- <a href="/bar/">Link with trailing slash</a><br>
+- <a href="/bar">Link without trailing slash</a><br>
 - <a href="/bar/subpage.html">Link without trailing slash + subpage</a><br>
 - <a href="/bar/subpage.html/">Link without trailing slash + subpage with trailing slash</a><br>
 
